samples/_failures_safe/1761417174_e76f6f_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_e441fb96.c: In function ‘main’:
./samples/SAFE/__tmp_e441fb96.c:141:5: error: expected declaration or statement at end of input
  141 |     if (compressed_size == 0) {
      |     ^~
./samples/SAFE/__tmp_e441fb96.c:141:5: error: expected declaration or statement at end of input
